--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,5 @@ addopts = --cov --no-cov-on-fail
 
 [coverage:run]
 branch = True
-source = src/pybana
-omit = src/pybana/constants.py
+source = pybana
+omit = pybana/constants.py
