--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-r requirements.txt
 black==18.6b4
 coverage==4.5.3
 flake8==3.7.7
@@ -7,3 +8,4 @@ recommonmark==0.6.0
 sphinx==1.8.5
 twine==3.0.0
 wheel>=0.31.0
+pytest-html==1.22.1
