--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,41 @@
 language: python
 
 python:
-  - 3.7
-  - 3.6
+  - 3.8
 
 services:
-  - elasticsearch
+  - docker
 
 before_install:
-  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.7.1.deb && sudo dpkg -i --force-confnew elasticsearch-6.7.1.deb && sudo service elasticsearch start
+  - if [[ "$TRAVIS_PULL_REQUEST_BRANCH" ]]; then git diff --quiet HEAD master -- ./piudash && travis_terminate 0 || echo "Python code has changed, launching tests...";fi
+  - sudo docker network create elastic8
+  - >
+    sudo docker run -d --name elasticsearch8 --net elastic8 -p 9201:9200 -p 9301:9300 
+    -e "xpack.security.enabled=false" 
+    -e "discovery.type=single-node" 
+    -e "cluster.name=docker-es8"
+    docker.elastic.co/elasticsearch/elasticsearch:8.19.3
+  - sudo docker network create elastic6
+  - >
+    sudo docker run -d --name elasticsearch6 --net elastic6 -p 9200:9200 -p 9300:9300
+    -e "xpack.security.enabled=false" 
+    -e "discovery.type=single-node" 
+    -e "cluster.name=docker-es6"
+    docker.elastic.co/elasticsearch/elasticsearch:6.7.1
+  - sleep 60
+  - curl http://localhost:9200
+  - curl http://localhost:9201
 
-script:
-  - while ! nc -z 127.0.0.1 9200; do sleep 1; done;
-  # - npm i vega@5.25.0
+install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
+  - nvm install
+  - nvm use
+  - npm install
+  #- npm i vega@5.25.0
 
+script:
   - flake8 .
   - black --check .
   - pytest
