--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,10 +2,10 @@
 black==18.6b4
 coverage==4.5.3
 flake8==3.7.7
-pytest-cov==2.6.1
-pytest==4.3.1
+pytest-cov==2.10.1
+pytest==8.3.5
 recommonmark==0.6.0
 sphinx==1.8.5
 twine==3.0.0
 wheel>=0.31.0
-pluggy==1.1.0
+#pluggy==1.1.0
