--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ services:
 before_install:
   - sudo docker network create elastic8
   - >
-    sudo docker run -d --name elasticsearch8 --net elastic8 -p 9201:9200 -p 9301:9300 
+    sudo docker run -d --name elasticsearch8 --net elastic8 -p 9200:9200 
     -e "xpack.security.enabled=false" 
     -e "discovery.type=single-node" 
     -e "cluster.name=docker-es8"
     docker.elastic.co/elasticsearch/elasticsearch:8.19.3
   - sudo docker network create elastic6
   - >
-    sudo docker run -d --name elasticsearch6 --net elastic6 -p 9200:9200 -p 9300:9300
+    sudo docker run -d --name elasticsearch6 --net elastic6 -p 9201:9200
     -e "xpack.security.enabled=false" 
     -e "discovery.type=single-node" 
     -e "cluster.name=docker-es6"
